# oci-mcp

./: LICENSE  README.md  install.sh  oci_mcp_server.py  pyproject.toml  requirements.txt  test_oci_connection.py
examples/: sample_queries.md
tests/: test_smoke.py
