[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-mcp-server"
version = "0.1.0"
description = "Oracle Cloud Infrastructure Model Context Protocol (MCP) Server"
readme = "README.md"
license = {text = "MIT"}
authors = [
  { name = "Karthik Sukumar", email = "karthiksukumar@gmail.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.4.0",
  "oci>=2.120.0",
  "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/oci-mcp-server"
Repository = "https://github.com/yourusername/oci-mcp-server.git"
Issues = "https://github.com/yourusername/oci-mcp-server/issues"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
